<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">机灵狗</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- main -->
    <string name="dialog_gps_title">GPS定位没有打开</string>
    <string name="dialog_gps_message">定位功能被关闭，为了使用电子狗服务，请打开GPS定位功能</string>
    <string name="dialog_btn_open">打开</string>
    <string name="dialog_btn_skip">跳过</string>
    <string name="current_kilometer">行驶%1$s公里</string>
    <string name="current_dataversion">数据版本：%1$s</string>
    <string name="live_road_condition">实时路况</string>
    
    <!-- netsetting dialog -->
    <string name="net_setting">网络设置</string>
    <string name="net_prompt">网络连接失败，请检查你的网络设置</string>
    
    <!-- 设置页面 -->
    <string name="set_title">设置</string>
    <string name="set_updateversion">版本更新</string>
    <string name="set_about">关于软件</string>
    <string name="set_qrcode">二维码</string>
    <string name="set_function">功能介绍</string>
    <string name="set_function_data">
                            非常感谢您使用本产品！本软件应用于安卓2.3以上系统 ，固定数据安全预警提醒功能，
                            若要使用流动测速预警功能，请搭配许可的雷达感应设备。
        </string>    
    
    <string name="set_introduction">功能介绍</string>
    <string name="set_imitate">模拟驾驶</string>
    <string name="set_report">电子狗设置</string>
    <string name="set_radarcom">雷达COM口设置           * 请不要随意更改这个设置</string>
    <string name="set_smartr_cloud">云功能设置</string>
    <string name="set_two_dimension_code">二维码显示</string>
    <string name="set_feedback">意见反馈</string>
    <string name="set_soft_update">软件升级</string>
    <string name="set_your_opinion_orAdvice">你的意见或建议:</string>
    <string name="set_plz_input">请输入...</string>
    <string name="map_send">发送</string>
    <string name="send_content_noempty">发送内容不能为空</string>
    
    <!-- 升级dialog -->
    <string name="download_notify">下载通知</string>
    <string name="dialog_update_title">升级提示</string>
    <string name="no_new_version_update">当前版本已是最新版本</string>
    <string name="new_version_update">最新版本为\"%1s\"，您是否要更新？</string>
    <string name="now_update">立即更新</string>
    <string name="now_no_update">暂时忽略</string>
    <string name="utils_download_fail_try_later">下载失败， 请稍后重试！</string>
    <string name="update_now">正在检查更新...</string>
    <string name="update_version_fail">检测更新失败，请稍后重试！</string>
    <string name="update_version_timeout">检测更新超时，请稍后重试！</string>
    
    <!-- 退出dialog -->
    <string name="dialog_alert">提示</string>
    <string name="dialog_error_alert">错误提示</string>
    <string name="dialog_exit_content">确认退出电子狗吗？</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_run_background">后台运行</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_del">删除</string>
    <string name="dialog_recovery">确认要恢复出厂设置吗？</string>    
    <string name="notify_alert">电子狗正在后台为您服务！</string>
    <string name="dialog_changecom_content">雷达COM口修改之后，有可能雷达测速无法使用，是否修改？</string>
    
    <!-- 电子眼 -->
    <string name="eeye_traffic_light">闯红灯拍照</string>
    <string name="eeye_camera">违规拍照</string>
    <string name="eeye_flow_speed">流动测试</string>    
    <string name="eeye_speed_30">限速30公里</string>    
    <string name="eeye_speed_40">限速40公里</string>
    <string name="eeye_speed_50">限速50公里</string>
    <string name="eeye_speed_60">限速60公里</string>
    <string name="eeye_speed_70">限速70公里</string>
    <string name="eeye_speed_80">限速80公里</string>
    <string name="eeye_speed_90">限速90公里</string>
    <string name="eeye_speed_100">限速100公里</string>
    <string name="eeye_speed_110">限速110公里</string>
    <string name="eeye_speed_120">限速120公里</string>
    <string name="eeyes_update">修正最后播报一次的电子眼数据</string>
    <string name="eeyes_longi">经度：%1$s</string>
    <string name="eeyes_late">纬度：%1$s</string>
    <string name="eeyes_bear">方向：%1$s</string>
    
    <!-- floatview -->
    <string name="floatview_speed">%1$sKm/h</string>

</resources>
